# dll-proxy

./: Cargo.toml  README.md
dll-proxy-core/: Cargo.toml  README.md
dll-proxy-core/src/: lib.rs  tests.rs  utils.rs  winternals.rs
dll-proxy-derive/: Cargo.toml  README.md
dll-proxy-derive/src/: lib.rs
dll-proxy-macro/: Cargo.toml
dll-proxy-macro/src/: lib.rs
src/: lib.rs  utils.rs  winternals.rs
