[package]
name = "dll-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["dll-proxy-macro", "dll-proxy-core"]

[dependencies]
dll-proxy-macro = { version = "0.1.0", path = "dll-proxy-macro" }
winreg = "0.52.0"
