[package]
name = "dll-proxy-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
colored-diff = "0.2.3"

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits", "full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
proc-macro-error = "1.0"
winreg = "0.52.0"
pe-util = { git = "https://github.com/Nordgaren/pe-util.git" }
